--- a/pipeline_templates/job_templates/cd_template.yaml
+++ b/pipeline_templates/job_templates/cd_template.yaml
@@ -60,6 +60,7 @@ jobs:
                   --create-namespace \
                   --install \
                   --wait \
+                  --timeout 180 #added by Deepesh
                   --version $(helmChartVersion) \
                   --set application.name=${{ parameters.projectName }} \
                   --set image.repository=$(repositoryURI) \
