--- a/azure_pipeline.yaml
+++ b/azure_pipeline.yaml
@@ -20,4 +20,4 @@ stages:
     serviceConnectionName: aws_connection
     awsRegion: us-east-1
     awsEKSClusterName: sandbox1
-    projectName: webapp
+    projectName: deepeshthoduvayil
