--- a/azure_pipeline.yaml
+++ b/azure_pipeline.yaml
@@ -17,7 +17,7 @@ stages:
 # Refering the pipeline template, input parameter that are not specified will be added with defaults
 - template: ./pipeline_templates/main_template.yaml
   parameters:
-    serviceConnectionName: aws_connection
+    serviceConnectionName: terraform-demo-connection
     awsRegion: us-east-1
     awsEKSClusterName: Dev-stackgenie-1d93
     projectName: webapp
