--- a/webapp/charts/webapp/templates/configmap.yaml
+++ b/webapp/charts/webapp/templates/configmap.yaml
@@ -17,7 +17,7 @@ data:
         <h3>Links</h3>
         <ul>
             <li>
-                <a href="https://aws.amazon.com/" target="_blank" rel="noopener">Hello Deepesh! Welcome to Amazon Cloud.</a>
+                <a href="https://aws.amazon.com/" target="_blank" rel="noopener">Hello Deepesh! Welcome to Azure Devops Demo on Amazon Cloud.</a>
             </li>
         </ul>
       </div>
